--- a/main.html
+++ b/main.html
@@ -11,6 +11,11 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<h1>Why I want to become a developer?</h1>
+	<p>
+		Becoming a developer can be incredibly rewarding. If you're a natural problem solver who enjoys piecing together puzzles, you'll likely thrive in this role. Developers are modern-day architects, constructing digital solutions with code. It's a field that marries creativity and logic, allowing you to bring your ideas to life. Beyond personal satisfaction, development offers excellent career prospects with strong earning potential and continuous opportunities to learn and grow. Plus, you'll have the chance to create products and services that can make a real impact on people's lives.
+	</p>
+
 </body>
 
 </html>
